--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@popperjs/core": "^2.11.8",
     "angular-datatables": "^17.0.0",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "ngx-highlight-js": "^17.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
