get instace from contest-details in problem-details ,handle group-component

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net-dt": "^2.0.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "mdb-ui-kit": "^7.2.0",
     "ngx-highlight-js": "^17.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
