feat: implemeted primeng table for group (members & contests)
- Done:
    - Configured Primeng v16 to with the project
    - created 2 models and components to handle the contest and group members data

- Issues:
    - Primeng paginator for group members, doesn't work as intended.
    - The design isn't good enough.

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,29 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+connect.lock/
+coverage/
+libpeerconnection.log/
+typings/
+.angular/
 
 # System files
 .DS_Store
 Thumbs.db
+
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
